--- a/chesley/trunk/TODO
+++ b/chesley/trunk/TODO
@@ -1,21 +1,15 @@
 Bugs:
 
-  * End of game detection isn't right. We only test when apply is
-    called *after the last move of the game*. This is no good in
-    interactive mode when EOG must be detected immediately .
-
 Next items:
 
-  * Must be able to automatically test correctness of move gen.
   * Must be able to automatically test speed of move gen.
-  * Must be correct before we worry about strength or speed.
-  * Must have a good way of measuring strength and speed before we try
-    to improved them.
+
+  * Must have a good way of measuring search correctness, strength,
+    and speed before we try to improved them.
 
   Therefore:
 
   * Implement EPD command. 
-  * Add epd extension opcode "pft" for testing perft numbers.
 
 Interface:
 
