Rewrite search engine. Implement iterative deepening and timed search. Implement stubs for Zobrist hashing. Misc. clean up.

--- a/chesley/trunk/TODO
+++ b/chesley/trunk/TODO
@@ -2,9 +2,11 @@ Bugs:
 
 Next items:
 
-  * Implement time control and iterative deepening.
+  * Implement zobrost hashing.
 
-
+  * Cleanup junky initialize code now we understand C++ global
+    initialization,
+     
   * Must have a good way of measuring search correctness, strength,
     and speed before we try to improved them.
 
