Finish hashing implementation. Implement transposition tables. Implement MTDf.

--- a/chesley/trunk/TODO
+++ b/chesley/trunk/TODO
@@ -2,6 +2,10 @@ Bugs:
 
 Next items:
 
+  * Hunt for things that can be made const.
+
+  * Use 16 bit types for indexes, scores, and depths.
+
   * Implement zobrost hashing.
 
   * Cleanup junky initialize code now we understand C++ global
