--- a/chesley/trunk/TODO
+++ b/chesley/trunk/TODO
@@ -5,6 +5,12 @@ Issues:
 
 Next items:
 
+  * 8/k7/3p4/p2P1p2/P2P1P2/8/8/K7 w - - 0 1: best move is Ka1b1. Must
+    search to play 20, which is nearly free with trans tables. Check
+    it in testsuite.
+
+  * Fix Fen parsing.
+
   * Return draw at 50 move rule, even if somebody is in check.
 
   * Convert ostring functions to to_string functions.
@@ -13,12 +19,10 @@ Next items:
 
   * Use 16 bit types for indexes, scores, and depths.
 
-  * Implement zobrost hashing.
-
   * Cleanup junky initialize code now we understand C++ global
     initialization,
-     
-  * Don't put so much junk in Move.    
+
+  * Don't put so much junk in Move.
 
   * Must have a good way of measuring search correctness, strength,
     and speed before we try to improved them.
@@ -66,14 +70,14 @@ Search
   * Quiescence search
   * Must do timed searches, and do some kind of overall time
     management for timed games.
-  * Iterative deepening.
+  X Iterative deepening.
   X Heuristic move ordering.
   * Aspiration windows
   * Transposition tables.
   * Static Exchange Evaluation (SEE) for capture ordering.
   * Null move heuristic
 
-  ??? MTD(f)
+  Debug MTD(f)
 
 Eval
 
