--- a/chesley/trunk/TODO
+++ b/chesley/trunk/TODO
@@ -9,8 +9,8 @@ Issues:
 Next items:
 
   * 8/k7/3p4/p2P1p2/P2P1P2/8/8/K7 w - - 0 1: best move is Ka1b1. Must
-    search to ply 20, which is nearly free with trans tables. Check
-    it in testsuite.
+    search to ply 20, which is nearly free with correct trans
+    tables. Check it in testsuite.
 
   * Convert ostring functions to to_string functions.
 
